--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -151,6 +151,8 @@ video.responsive-video {
     display: inline-block;
     border-radius: 2px;
     text-align: center;
+    vertical-align: top;
+    height: 30px;
 
     a {
       color: #444;
@@ -170,8 +172,7 @@ video.responsive-video {
     }
 
     i {
-      font-size: 2.2rem;
-      vertical-align: middle;
+      font-size: 2rem;
     }
   }
 
